# chrome-ex-get-text

./: .gitignore  README.md
plugin/: background.js  content.js  manifest.json
plugin/pages/category/: category.js  index.html  style.css
plugin/pages/favorite/: favorite.js  index.html  style.css
plugin/pages/settings/: index.html  settings.js  style.css
plugin/pages/tag/: index.html  style.css  tag.js
plugin/popup/: index.html  popup.js  style.css
plugin/styles/: common.css
plugin/templates/: header.html
plugin/utils/: common.js  errorHandler.js
server/: .env  Cargo.toml  config.toml  data.db
server/db_root/: data.db
server/src/: config.rs  db.rs  error.rs  main.rs  models.rs
server/src/handlers/: bookmark.rs  category.rs  favorite.rs  mod.rs  tag.rs
server/src/tests/: mod.rs
src/: api_doc.rs
src/tests/: mod.rs
